fix(jira): avatar image getting stretched

--- a/src/app/features/issue/jira/jira-issue/jira-issue-content/jira-issue-content.component.scss
+++ b/src/app/features/issue/jira/jira-issue/jira-issue-content/jira-issue-content.component.scss
@@ -54,6 +54,7 @@
 .comment {
   display: flex;
   margin-bottom: $s*2;
+  align-items: flex-start;
 
   .author-avatar {
     margin-right: $s;
